Correct alignment of publication checkbox
* Reset generic filter styles applied to form elements when in a
checkbox container

--- a/app/assets/stylesheets/admin/views/editions/_filter_options.scss
+++ b/app/assets/stylesheets/admin/views/editions/_filter_options.scss
@@ -45,5 +45,16 @@
     select {
       width: 100%;
     }
+
+    .checkbox {
+      label {
+        font-weight: normal;
+        line-height: 18px;
+      }
+
+      input {
+        width: auto;
+      }
+    }
   }
 }
